--- a/src/app/files/home/home.component.css
+++ b/src/app/files/home/home.component.css
@@ -68,10 +68,11 @@ body{
     }
     .try{ 
         height: max-content;
+        object-fit: cover;
         
     }
     .carousel-item{
         
-        height: 70vh;
+        height: 200px;
     }
 }
